# PirateOne

./: .gitignore  .replit  README.md  anime.html  api_server.py  build.sh  config.js  history.html  index.html  login.html  main.py  manage.py  manga.html  movies.html  player.html  profile.html  pyproject.toml  register.html  render.yaml  replit.md  requirements.txt  search.html  server.py  settings.html  start_server.sh  tvshows.html  vercel.json  vercel_startup.py  watchlist.html
api/: admin.py  models.py  urls.py  vercel_handler.py  views.py
api/migrations/: 0001_initial.py
api/templates/api/: history.html  index.html  register.html  search.html
attached_assets/: Pasted--svg-xmlns-http-www-w3-org-2000-svg-width-25-height-25-class-fill-slate-100-shrink-0-undefi-1762499867219_1762499867227.txt
css/: styles.css
js/: api.js  auth.js  browse.js  layout.js  main.js  player.js  search-suggestions.js  search.js
pirateone_backend/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
static/js/: layout.js  main.js  search-suggestions.js
staticfiles/: browse.js  search.js
staticfiles/js/: django-api.js
templates/: anime.html  history.html  index.html  login.html  movies.html  player.html  profile.html  register.html  search.html  settings.html  tvshows.html  watchlist.html
templates/api/: anime.html  movies.html  profile.html  settings.html  tvshows.html
